appkr/swagger-poc-api PHP 클라이언트 라이브러리 설치

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,12 @@
 APP_ENV=local
 APP_DEBUG=true
-APP_KEY=
-APP_TIMEZONE=UTC
+APP_KEY=LaNbAh1X7Z1CkNhkVsy2oLhADPV0wS50
+APP_TIMEZONE=Asia/Seoul
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
-
+DB_CONNECTION=sqlite
 CACHE_DRIVER=file
 QUEUE_DRIVER=sync
+
+SWAGGER_POC_API_SERVER_URL=http://localhost
+SWAGGER_POC_API_USERNAME=member@example.com
+SWAGGER_POC_API_PASSWORD=secret
