--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,10 @@
         }
     },
     "autoload-dev": {
+        "psr-4": {
+            "Test\\": "tests/"
+        },
         "classmap": [
-            "tests/",
             "database/"
         ]
     },
